--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <form action="/action_page.php">
       <label for="fname">First name:</label>
+      <input type="text" id="fname" name="fname"><br><br>    
     </form> 
     
 </head>
