--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <form action="/action_page.php">
-      <label for="fname">First name:</label>
+      <label for="fname">Text:</label>
       <input type="text" id="fname" name="fname"><br><br>    
     </form> 
     
