--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <form action="/action_page.php">
       <label for="fname">Text:</label>
-      <input type="text" id="fname" name="fname"><br><br>    
+      <input type="text" id="fname" name="fname"><br><br> 
+      <input type="submit" value="Submit">
     </form> 
     
 </head>
