--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <form action="/action_page.php">
       <label for="fname">Text:</label>
       <input type="text" id="fname" name="fname"><br><br> 
-      <input type="submit" value="Submit">
+      <input type="submit" value="Rewrite">
     </form> 
     
 </head>
