--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       <input type="text" id="fname" name="fname"><br><br> 
       <input type="submit" value="Rewrite">
     </form> 
-    
+    <?PHP
+        echo shell_exec("python test.py 'parameter1'");
+    ?>
 </head>
 <body>
     
