--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <script defer src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython.min.js"></script>
 </head>
 <body onload="brython()">
+
+
+<h1>Welcome to Brython</h1>
+    
 <py-script>
     from browser import document
     document["message"].text = "Hello from Python in the browser!"
