--- a/test.html
+++ b/test.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
-<html>
 
-<head>
-<script src="/src/brython.js"></script>
-<script src="/src/brython_stdlib.js"></script>
-</head>
 
-<body>
-<script type="text/python" src="test.py"></script>
-<input id="zone" autocomplete="off">
-<button id="mybutton">click!</button>
-</body>
-
+<!Doctype html> 
+<html> 
+<head> 
+    <meta charset = "utf-8"> 
+    <script type = "text/javascript"
+        src = "https://cdn.jsdelivr.net/npm/brython@3.8.9/brython.min.js"> 
+    </script> 
+</head> 
+  
+<body onload = "brython()"> 
+<script type = "text/python"> 
+from browser import document 
+  
+document <= "Hello World!" 
+</script> 
+</body> 
 </html>
