--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
  <body>
   <h1 style="color: red;">HTMLego</h1>
   <h3>The building blocks of your website</h3>
+  <strong> rama is skibidi</strong>
  </body>
 </html>"
