--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   <h1 style="color: red;">HTMLego</h1>
   <h3>The building blocks of your website</h3>
   <strong> rama is skibidi</strong>
+  <img>limglighthouse.png"</img> width : 50px
  </body>
 </html>"
