--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
  <body>
   <h1 style="color: red;">HTMLego</h1>
   <h3>The building blocks of your website</h3>
-  <img>limglighthouse.png</img> width : 50px
+  <img>limglighthouse.png</img>
  </body>
 </html>"
