--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <body>
-  <h1 style="color: red;">HTMLego</h1>
+  <h1 style="color: red;">HTMLego"</h1>
   <h3>The building blocks of your website</h3>
   <img>limglighthouse.png</img>
  </body>
