--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
  <body>
+  <h1 style="color: red;">HTMLego</h1>
+  <h3>The building blocks of your website</h3>
   <img src=limglighthouse.png>
  </body>
 </html>
