--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
  <body>
-  <h1 style="color: red;">HTMLego</h1>
-  <h3>The building blocks of your website</h3>
+  <h1 style=color: red;> "HTMLego"</h1>
+  <h3> The building blocks of your website </h3>
+  <strong> rama is skibidi</strong>
   <img src=limglighthouse.png>
  </body>
 </html>
