--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <h1 style=color: red;> "HTMLego"</h1>
   <h3> The building blocks of your website </h3>
   <strong> rama is skibidi</strong>
-  <img src=limglighthouse.png>
+  <img src=limglighthouse.png width="500">
  </body>
 </html>
